<resources>
    <string name="app_name">EcoDrive</string>
    <string name="txtDistance">Distância</string>
    <string name="txtKilometers">Total de Quilômetros</string>
    <string name="txtPrice">Preço</string>
    <string name="txtPricePerLt">Preço por litro</string>
    <string name="txtAutonomy">Autonomia</string>
    <string name="txtKmPerLt">KMs por Litro</string>
    <string name="txtTotalExpense">Seu gasto total será de:</string>
    <string name="txtValue">R$ 0</string>
    <string name="txtBtnCalculate">Calcular custo</string>
    <string name="warningText">Preencha todos os campos!</string>
    <string name="numberzero">0</string>


</resources>