<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txtDistance"
        android:inputType="number"
        android:textColor="@color/gray_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/txtKilometers"
        android:textColor="@color/gray_light" />

    <EditText
        android:id="@+id/editText_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/txtPrice"
        android:inputType="numberDecimal"
        android:textColor="@color/gray_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/txtPricePerLt" />

    <EditText
        android:id="@+id/editText_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/txtAutonomy"
        android:inputType="numberDecimal"
        android:textColor="@color/gray_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/txtKmPerLt"
        android:textColor="@color/gray_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:text="@string/txtTotalExpense"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textField_totalExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtValue"
        android:textAllCaps="true"
        android:textColor="@color/blueValue"
        android:textSize="38sp" />

    <Button
        android:id="@+id/dbutton_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/teal_200"
        android:padding="14dp"
        android:text="@string/txtBtnCalculate"
        android:textAllCaps="true"
        android:textSize="20sp" />


</LinearLayout>